--- a/index.html
+++ b/index.html
@@ -10,16 +10,28 @@
         <section id="seleccionar-mascota">
             <h1 class="titulo">MOKEPON!🔥💧🌱</h1>
 
-            <h2>Elige tu mascota:</h2>
+            <h2 class="subtitulo">Elige tu mascota:</h2>
 
-            <label class="tarjeta-mascota" for="Greninja">Greninja</label>
+            <div class="tarjetas">
+
+            <label class="tarjeta-mascota" for="Greninja">
+                <p>Greninja</p>
+                <img src="Greninja.png" alt="Greninja">
+            </label>
             <input type="radio" name="mascota" id="Greninja" />
             
-            <label class="tarjeta-mascota" for="Charizard">Charizard</label>
+            <label class="tarjeta-mascota" for="Charizard">
+                <p>Greninja</p>
+                <img src="Charizard.png" alt="Charizard">
+            </label>
             <input type="radio" name="mascota" id="Charizard" />
             
-            <label class="tarjeta-mascota" for="Venusaur">Venusaur</label>
+            <label class="tarjeta-mascota" for="Venusaur">
+                <p>Venusaur</p>
+                <img src="Venuzaur.png" alt="Venusaur">
+            </label>
             <input type="radio" name="mascota" id="Venusaur" />
+            </div>
 
             <button id="boton-mascota">Seleccionar</button>
         </section>
