--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <section id="seleccionar-ataque">
             <h1 class="titulo">MOKEPON!🔥💧🌱</h1>
 
-            <h2>Elige tu ataque:</h2>
+            <h2 class="subtitulo">Elige tu ataque:</h2>
 
             <div>
-                <button id="boton-fuego">Fuego 🔥</button>
-                <button id="boton-agua">Agua 💧</button>
-                <button id="boton-tierra">Tierra 🌱</button>
+                <button id="boton-fuego" class="boton-ataques">Fuego 🔥</button>
+                <button id="boton-agua" class="boton-ataques">Agua 💧</button>
+                <button id="boton-tierra" class="boton-ataques">Tierra 🌱</button>
             </div>
                 
             <div>
