--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
                 <button id="boton-tierra" class="boton-ataques">Tierra 🌱</button>
             </div>
                 
-            <div>
-                <section id="mensajes">
-                </section>
-        
+        <div id="mensajes">
+                <div id="resultado">Mucha suerte</div>
+
                 <section id="reiniciar">
                     <button id="boton-reiniciar">Reiniciar</button>
                 </section>
             </div>
-
             <div>
+                <div id="ataques-jugador"></div>
+                <div id="ataques-enemigo"></div>
                 <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
-            <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
+                <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
             </div>
 
         </section>
