--- a/index.html
+++ b/index.html
@@ -54,13 +54,18 @@
                     <button id="boton-reiniciar">Reiniciar</button>
                 </section>
             </div>
-            <div>
-                <div id="ataques-jugador"></div>
-                <div id="ataques-enemigo"></div>
-                <p>Tu mascota <span id="mascota-jugador"></span> tiene <span id="vidas-jugador">3</span> vidas</p>
-                <p>La mascota <span id="mascota-enemigo"></span> del enemigo tiene <span id="vidas-enemigo">3</span> vidas</p>
+            <div class="ataques">
+                <div>
+                    <p id="vidas-jugador"></span>
+                    <p id="mascota-jugador"></p>
+                    <div id="ataques-jugador"></div>
+                </div>
+                <div>
+                    <p id="vidas-enemigo"></span>
+                    <p id="mascota-enemigo"></p>
+                    <div id="ataques-enemigo"></div>
+                </div>
             </div>
-
         </section>
     </body>
 </html>
