--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <h2 class="subtitulo">Elige tu ataque:</h2>
 
-            <div>
+            <div class="tarjetas-ataques">
                 <button id="boton-fuego" class="boton-ataques">Fuego 🔥</button>
                 <button id="boton-agua" class="boton-ataques">Agua 💧</button>
                 <button id="boton-tierra" class="boton-ataques">Tierra 🌱</button>
@@ -55,13 +55,13 @@
                 </section>
             </div>
             <div class="ataques">
-                <div>
-                    <p id="vidas-jugador"></span>
+                <div class="ataques-del-jugador">
+                    <p id="vidas-jugador">3</p>
                     <p id="mascota-jugador"></p>
                     <div id="ataques-jugador"></div>
                 </div>
-                <div>
-                    <p id="vidas-enemigo"></span>
+                <div class="ataques-del-enemigo">
+                    <p id="vidas-enemigo">3</p>
                     <p id="mascota-enemigo"></p>
                     <div id="ataques-enemigo"></div>
                 </div>
