--- a/index.html
+++ b/index.html
@@ -11,25 +11,8 @@
 
             <h2 class="subtitulo">Elige tu mascota:</h2>
 
-            <div class="tarjetas">
+            <div id="contenedor-tarjetas" class="tarjetas">
 
-            <input type="radio" name="mascota" id="Greninja" />
-            <label class="tarjeta-mascota" for="Greninja">
-                <p>Greninja</p>
-                <img src="Greninja.png" alt="Greninja">
-            </label>
-            
-            <input type="radio" name="mascota" id="Charizard" />
-            <label class="tarjeta-mascota" for="Charizard">
-                <p>Greninja</p>
-                <img src="Charizard.png" alt="Charizard">
-            </label>
-            
-            <input type="radio" name="mascota" id="Venusaur" />
-            <label class="tarjeta-mascota" for="Venusaur">
-                <p>Venusaur</p>
-                <img src="Venuzaur.png" alt="Venusaur">
-            </label>
 
             </div>
 
