--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
 
             <h2 class="subtitulo">Elige tu ataque:</h2>
 
-            <div class="tarjetas-ataques">
-                <button id="boton-fuego" class="boton-ataques">Fuego 🔥</button>
-                <button id="boton-agua" class="boton-ataques">Agua 💧</button>
-                <button id="boton-tierra" class="boton-ataques">Tierra 🌱</button>
+            <div id="contenedor-ataques" class="tarjetas-ataques">
             </div>
                 
         <div id="mensajes">
