--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <section id="ver-mapa">
             <h1 class="titulo">Recorre el mapa con tu mokepon</h1>
             <canvas id="mapa">
-
             </canvas>
+            <button onclick="moverGreninja()">Mover</button>
         </section>
 
         <section id="seleccionar-ataque">
