--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>MOKEPON!</title>
         <link rel="stylesheet"  href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
         <section id="seleccionar-mascota">
@@ -24,9 +25,11 @@
             <canvas id="mapa">
             </canvas>
             <button onmouseup="detenerMovimiento()" onmousedown="moverArriba()">Mover Arriba</button>
-            <button onmouseup="detenerMovimiento()" onmousedown="moverAbajo()">Mover Abajo</button>
-            <button onmouseup="detenerMovimiento()" onmousedown="moverIzquierda()">Mover Izquierda</button>
-            <button onmouseup="detenerMovimiento()" onmousedown="moverDerecha()">Mover Derecha</button>
+            <div>
+                <button onmouseup="detenerMovimiento()" onmousedown="moverAbajo()">Mover Abajo</button>
+                <button onmouseup="detenerMovimiento()" onmousedown="moverIzquierda()">Mover Izquierda</button>
+                <button onmouseup="detenerMovimiento()" onmousedown="moverDerecha()">Mover Derecha</button>
+            </div>
         </section>
 
         <section id="seleccionar-ataque">
